--- a/apps/ledger-live-mobile/src/locales/es/common.json
+++ b/apps/ledger-live-mobile/src/locales/es/common.json
@@ -88,7 +88,11 @@
     "getSupport" : "Obtener ayuda",
     "comingSoon" : "Próximamente",
     "restart" : "Reiniciar",
-    "loadMore" : "Cargar más"
+    "loadMore" : "Cargar más",
+    "patterns" : {
+      "id" : "ID {{ value }}",
+      "times" : "x{{ value }}"
+    }
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -828,7 +832,9 @@
     "required" : "Parece que tu Bluetooth está deshabilitado",
     "locationRequiredTitle" : "La ubicación es necesaria para Bluetooth LE",
     "locationRequiredMessage" : "Es necesario otorgar permisos de ubicación de Android para mostrar los dispositivos de Bluetooth LE.",
-    "checkEnabled" : "Habilita Bluetooth en los ajustes del teléfono."
+    "checkEnabled" : "Habilita Bluetooth en los ajustes del teléfono.",
+    "tryEnablingAgain" : "Prueba a activar el Bluetooth de nuevo",
+    "openSettings" : "Abrir los ajustes Bluetooth"
   },
   "webview" : {
     "noConnectionError" : {
@@ -838,12 +844,10 @@
   },
   "location" : {
     "titleServiceRequired" : "Son necesarios los servicios de ubicación",
-    "titlePermissionRequired" : "Es necesario el permiso de ubicación",
-    "titlePermissionRequiredPrecise" : "Es necesario el permiso de ubicación precisa",
     "descriptionServiceRequired" : "Ledger Live necesita servicios de ubicación para emparejar tu dispositivo mediante Bluetooth.",
-    "descriptionPermissionRequired" : "Ledger Live necesita el permiso de ubicación para emparejar tu dispositivo mediante Bluetooth.",
-    "descriptionPermissionRequiredPrecise" : "Ledger Live necesita el permiso de ubicación precisa para emparejar tu dispositivo mediante Bluetooth.",
     "open" : "Abrir ajustes de ubicación",
+    "openSettings" : "Abrir ajustes de ubicación",
+    "tryEnablingAgain" : "Prueba a activar la ubicación de nuevo",
     "noInfos" : "Ledger no accederá a tu información de ubicación."
   },
   "permissions" : {
@@ -856,6 +860,12 @@
       "modalButtonLabelBase" : "Autorizar",
       "modalButtonLabelSettingsVariant" : "Ir a Ajustes",
       "dontPair" : "No emparejar"
+    },
+    "location" : {
+      "titlePermissionRequired" : "Es necesario el permiso de ubicación",
+      "titlePermissionRequiredPrecise" : "Es necesario el permiso de ubicación precisa",
+      "descriptionPermissionRequired" : "Ledger Live necesita el permiso de ubicación para emparejar tu dispositivo mediante Bluetooth.",
+      "descriptionPermissionRequiredPrecise" : "Ledger Live necesita el permiso de ubicación precisa para emparejar tu dispositivo mediante Bluetooth."
     },
     "camera" : {
       "title" : "Autorizar cámara",
@@ -1279,8 +1289,13 @@
       },
       "recovery" : "¿Ya tienes una Frase de recuperación?",
       "protect" : {
-        "label" : "Aproximadamente 60 min",
-        "subTitle" : "Restaurar con Protect"
+        "subTitle" : "Restaurar con Ledger Recover",
+        "drawer" : {
+          "title" : "Usar Ledger Nano X",
+          "desc" : "El prelanzamiento de Ledger Recover es exclusivo para el Ledger Nano X",
+          "buyNanoX" : "Compra un Ledger Nano X",
+          "discoverBenefits" : "Descubre las ventajas"
+        }
       }
     },
     "stepNewDevice" : {
@@ -1507,25 +1522,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "Examinar ",
-          "label" : "Aprende a interactuar con tu dispositivo mediante las instrucciones en pantalla."
+          "title" : "Selecciona “Restore” (Restaurar)",
+          "label" : "Presiona los dos botones a la vez para seleccionar."
         },
         "1" : {
-          "title" : "Selecciona “Restore” (Restaurar)",
-          "label" : "Presiona ambos botones simultáneamente para validar la selección."
-        },
-        "2" : {
-          "title" : "Selecciona el modo “Restore with Protect” (Restaurar con Protect).",
-          "label" : "Presiona ambos botones simultáneamente para validar la selección."
+          "title" : "Selecciona “Restore using Ledger Recover” (Restaurar con Ledger Recover).",
+          "label" : "Presiona los dos botones a la vez para seleccionar."
         }
       },
       "nextStep" : "Continuar",
       "extraInfo" : {
-        "tooltip" : "No veo esa opción en mi Ledger",
-        "title" : "¿Por qué no veo la opción “Restore with Protect” (Restaurar con Protect) en mi Ledger?",
-        "desc1" : "Lo más probable es que tu dispositivo no sea compatible con Protect. No te preocupes, con gusto te ayudaremos a resolverlo.",
-        "desc2" : "Ponte en contacto con nosotros y elige la opción \"En Mi Ledger no se muestra Restore with Protect\" para que podamos ayudarte.",
-        "cta" : "Seguir los pasos manuales",
+        "tooltip" : "No veo “Restore using Ledger Recover” (Restaurar con Ledger Recover)",
+        "title" : "Es necesario actualizar el SO de tu Ledger Nano X",
+        "desc" : "Puedes probar a actualizar el SO o contactar con el servicio de soporte de Ledger para pedir ayuda.",
+        "cta" : "Aprende cómo actualizarlo",
         "supportLink" : "Ponte en contacto con el Soporte de Ledger"
       }
     },
@@ -1667,8 +1677,9 @@
         }
       },
       "protectConnectionInformationModal" : {
-        "title" : "¿Por qué no puedo conectar mi Ledger?",
-        "description" : "Si tienes problemas para conectarte a Ledger Live Mobile después de activar el Bluetooth en tu Ledger, puedes seguir las instrucciones pulsando el botón \"Cómo resolverlo\" a continuación"
+        "title" : "Conexión con el Ledger Nano X",
+        "description" : "Asegúrate de que tienes el teléfono móvil cerca de tu Ledger e inténtalo de nuevo. <LinkBluethooth>Problemas de conexión Bluetooth® \n</LinkBluethooth>.\nSi el Bluetooth® funciona correctamente, puede que tengas que actualizar el SO del Ledger. Prueba a actualizar el SO o contactar con el servicio de soporte de Ledger para pedir ayuda. ",
+        "learnHowToUpdate" : "Aprende cómo actualizarlo"
       }
     },
     "stepImportAccounts" : {
@@ -1892,7 +1903,9 @@
     "seedStep" : {
       "title" : "Frase de recuperación secreta",
       "doneTitle" : "Frase de recuperación secreta confirmada",
-      "description" : "Tu Frase de recuperación es una lista secreta de 24 Palabras que genera una copia de respaldo de tus claves privadas. Tu {{productName}} genera una Frase de recuperación única. Ledger no conserva ninguna copia."
+      "description" : "Tu Frase de recuperación es una lista secreta de 24 Palabras que genera una copia de respaldo de tus claves privadas. Tu {{productName}} genera una Frase de recuperación única. Ledger no conserva ninguna copia.",
+      "selection" : "Elige la opción de configuración que mejor se ajuste a tus necesidades.",
+      "recovery" : "Para garantizar la seguridad de tus activos, utiliza una Frase de recuperación secreta generada por un Ledger.\n\n¿No tienes una? Usa tu {{productName}} para generar una Frase nueva."
     },
     "softwareChecksSteps" : {
       "title" : "Comprobaciones de hardware y software",
@@ -5446,6 +5459,7 @@
     "warnDelegation" : "Si delegas tus derechos de voto, las recompensas de tu validador no estarán garantizadas.",
     "to" : "a",
     "from" : "desde",
+    "yield" : "Rendimiento Est.",
     "forAnEstYield" : "con un rendimiento est. de",
     "yieldPerYear" : "{{yield}}/Año",
     "yieldInfos" : "Las tasas de rendimiento las proporciona",
@@ -5573,6 +5587,7 @@
     "cta" : "Continuar"
   },
   "exchange" : {
+    "count" : "+ {{count}} más",
     "buy" : {
       "screenTitle" : "COMPRAR CRIPTO",
       "tabTitle" : "Comprar",
@@ -6026,22 +6041,10 @@
       "status" : {
         "new" : {
           "title" : "Nuevo",
-          "desc" : "Respalda tu Frase de recuperación",
-          "0" : {
-            "title" : "Millones de usuarios de Ledger confían en nosotros"
-          },
-          "1" : {
-            "title" : "Tu Frase de recuperación está vinculada a tu identidad de forma segura"
-          },
-          "2" : {
-            "title" : "Cifrado con tecnología de avanzada"
-          },
-          "3" : {
-            "title" : "Distribuido en 3 instalaciones descentralizadas, de manera de que nadie pueda robar tu Frase de recuperación"
-          },
+          "desc" : "Recupera el acceso a tu billetera sin tu Frase de recuperación secreta.",
           "actions" : {
-            "learnMore" : "Más información",
-            "alreadySubscribed" : "¿Ya estás suscrito a Protect?"
+            "learnMore" : "¿Qué beneficios me ofrece?",
+            "alreadySubscribed" : "¿Ya tienes una suscripción? <LinkAccount>Ver mi cuenta</LinkAccount>"
           }
         },
         "confirmIdentity" : {
@@ -6104,5 +6107,30 @@
     "title" : "Newsfeed",
     "poweredByCryptopanic" : "Con tecnología de Cryptopanic",
     "noPosts" : "No hay ninguna publicación disponible"
+  },
+  "deviceConnect" : {
+    "title" : "Conectar dispositivo"
+  },
+  "stake" : {
+    "noFundsModal" : {
+      "title" : "Compra, permuta o recibe",
+      "text" : "No tienes suficientes {{coin}} disponibles para poner en participación",
+      "description" : "¿No tienes fondos suficientes? No te preocupes, puedes comprar, permutar o recibir cripto de forma segura directamente en Ledger Live.",
+      "options" : {
+        "buy" : {
+          "title" : "Comprar",
+          "body" : "Compra a proveedores de confianza"
+        },
+        "swap" : {
+          "title" : "Permutar",
+          "label" : "Popular",
+          "body" : "Convierte de una cripto a otra de manera segura"
+        },
+        "receive" : {
+          "title" : "Recibir",
+          "body" : "Recibe cripto en tu billetera"
+        }
+      }
+    }
   }
 }
